--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <h1 id="title2">Justificativa</h1>
 
                     <div class="text1">
-                        <p>Este site foi desenvolvido por mim, Douglas Lima, como um projeto da Cadeira de Tópicos Avançados de Design de Interfaces, para o Dia Nacional do Design, visando Desinvisibilizar o Design no mês de sua comemoração.</p>
+                        <p>Este site foi desenvolvido por mim, Douglas Lima, como um projeto da cadeira de Tópicos Avançados de Design de Interfaces no Dia Nacional do Design, visando desinvisibilizar e mostrar um pouco da história do Design no Brasil.</p>
                     </div>
                 </div>
                 <div class="aux2">
